Add laser technology boost to solar satellites